Add new hero banner, 9 template images, mobile-safe layout & uniform copy buttons

--- a/guides/profile-photo-checklist.html
+++ b/guides/profile-photo-checklist.html
@@ -1,51 +1,272 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Profile photo checklist for dating apps</title>
-  <meta name="description" content="A simple photo checklist that improves matches without fancy gear." />
-  <link rel="canonical" href="https://dategirlseasy.com/guides/profile-photo-checklist.html" />
-  <link rel="stylesheet" href="/styles.css" />
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Article",
-    "headline":"Profile photo checklist for dating apps",
-    "author":{"@type":"Person","name":"Date Girls Easy"},
-    "datePublished":"2025-09-15"
-  }
-  </script>
-</head>
-<body>
-  <header class="wrap"><a href="/">Date Girls Easy</a></header>
-  <main class="wrap">
-    <h1>Profile photo checklist for dating apps</h1>
-    <p>Quick wins that work on every app. Keep it natural and PG 13.</p>
+  <head>
+    <meta charset="utf-8" />
+    <title>Profile photo checklist for dating apps</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="A simple photo checklist that improves matches without fancy gear. Shoot clear, natural photos that make you look confident and approachable."
+    />
+    <link
+      rel="canonical"
+      href="https://dategirlseasy.com/guides/profile-photo-checklist.html"
+    />
 
-    <h2>What to shoot</h2>
-    <ul>
-      <li>Clear head and shoulders in natural light</li>
-      <li>One full length standing photo</li>
-      <li>One candid doing something you enjoy</li>
-      <li>One social photo with friends where you are centered</li>
-    </ul>
+    <!-- Favicons -->
+    <link rel="icon" href="/assets/logo.png" />
+    <link rel="apple-touch-icon" href="/assets/logo.png" />
 
-    <h2>What to skip</h2>
-    <ul>
-      <li>Blurry selfies and heavy filters</li>
-      <li>Group photos only with no solo picture</li>
-      <li>Anything not PG 13</li>
-    </ul>
+    <!-- Theme color for mobile UI -->
+    <meta name="theme-color" content="#6E4CFF" />
 
-    <h2>Next steps</h2>
-    <p>Read <a href="/guides/bio-templates.html">bio templates by personality</a> and <a href="/guides/openers-that-get-replies.html">openers that get replies</a>.</p>
+    <!-- Fonts: preconnect and preload for faster paint -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&display=swap"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&display=swap"
+      />
+    </noscript>
 
-    <section aria-label="Disclosure">
-      <p>Some links may earn a commission. Your price does not change.</p>
-    </section>
-  </main>
-  <footer class="wrap">Date Girls Easy © <span id="y"></span></footer>
-  <script>document.getElementById('y').textContent = new Date().getFullYear()</script>
-</body>
+    <!-- Site styles -->
+    <link rel="stylesheet" href="/styles.css" />
+
+    <!-- Open Graph and Twitter -->
+    <meta
+      property="og:title"
+      content="Profile photo checklist for dating apps"
+    />
+    <meta
+      property="og:description"
+      content="Quick wins that improve matches. Use natural light, simple backgrounds, and confident posture."
+    />
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:url"
+      content="https://dategirlseasy.com/guides/profile-photo-checklist.html"
+    />
+    <meta
+      property="og:image"
+      content="https://dategirlseasy.com/assets/og/default.jpg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Profile photo checklist for dating apps"
+    />
+    <meta
+      name="twitter:description"
+      content="Quick wins that improve matches. Use natural light, simple backgrounds, and confident posture."
+    />
+    <meta
+      name="twitter:image"
+      content="https://dategirlseasy.com/assets/og/default.jpg"
+    />
+
+    <!-- Structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "Profile photo checklist for dating apps",
+        "description": "A simple photo checklist that improves matches without fancy gear.",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://dategirlseasy.com/guides/profile-photo-checklist.html"
+        },
+        "datePublished": "2025-09-15",
+        "dateModified": "2025-09-19",
+        "author": { "@type": "Organization", "name": "DGE Inc." },
+        "publisher": {
+          "@type": "Organization",
+          "name": "DGE Inc.",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://dategirlseasy.com/assets/logo.png"
+          }
+        }
+      }
+    </script>
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="container">
+        <a class="brand" href="/" aria-label="Date Girls Easy"
+          >Date Girls Easy</a
+        >
+        <nav class="top-nav" aria-label="Main">
+          <a href="/how-it-works.html">How it works</a>
+          <a href="/guides/">Guides</a>
+          <a href="/reviews/">App reviews</a>
+          <a href="/join.html" class="button">Join</a>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <article class="container">
+        <header class="article-hero">
+          <h1>Profile photo checklist for dating apps</h1>
+          <p class="lede">
+            Quick wins that work on every app. Keep it natural and PG 13.
+          </p>
+        </header>
+
+        <section>
+          <h2>What to shoot</h2>
+          <ul>
+            <li>Clear head and shoulders in natural light</li>
+            <li>One full length standing photo</li>
+            <li>One candid doing something you enjoy</li>
+            <li>One social photo with friends where you are centered</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>What to skip</h2>
+          <ul>
+            <li>Blurry selfies and heavy filters</li>
+            <li>Group photos only with no solo picture</li>
+            <li>Anything not PG 13</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Simple shooting tips</h2>
+          <ul>
+            <li>Face a window or open shade for soft light</li>
+            <li>Keep backgrounds simple and clean</li>
+            <li>Stand tall, relax shoulders, slight smile</li>
+            <li>Wear solid colors that contrast your background</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Next steps</h2>
+          <p>
+            Read
+            <a href="/guides/bio-templates.html">bio templates by personality</a
+            >, grab
+            <a href="/guides/openers-that-get-replies.html"
+              >openers that get replies</a
+            >, and line up your
+            <a href="/playbooks/first-date-playbook.html">first date plan</a>.
+          </p>
+        </section>
+
+        <section class="disclosure" aria-label="Disclosure">
+          <p>Some links may earn a commission. Your price does not change.</p>
+        </section>
+      </article>
+    </main>
+
+    <footer class="site-footer">
+      <div class="container">
+        <nav class="footer-nav" aria-label="Footer">
+          <a href="/how-it-works.html">How it works</a>
+          <a href="/guides/">Guides</a>
+          <a href="/reviews/">App reviews</a>
+          <a href="/join.html">Join</a>
+        </nav>
+        <p>© <span id="yr"></span> Date Girls Easy</p>
+      </div>
+    </footer>
+
+    <script>
+      document.getElementById("yr").textContent = new Date().getFullYear();
+    </script>
+
+    <style>
+      :root {
+        --bg: #0b0c10;
+        --ink: #f3f4f6;
+        --ink2: #c9cbd1;
+        --brand: #6e4cff;
+        --muted: #14151b;
+      }
+      body {
+        margin: 0;
+        font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+        color: var(--ink);
+        background: var(--bg);
+      }
+      .container {
+        max-width: 1100px;
+        margin: 0 auto;
+        padding: 20px;
+      }
+      .site-header {
+        border-bottom: 1px solid #1e2130;
+        background: transparent;
+      }
+      .brand {
+        font-family: "Bebas Neue", sans-serif;
+        font-size: 28px;
+        text-decoration: none;
+        color: var(--ink);
+        letter-spacing: 0.5px;
+      }
+      .top-nav a {
+        margin-left: 16px;
+        text-decoration: none;
+        color: var(--ink2);
+      }
+      .top-nav .button {
+        margin-left: 16px;
+      }
+      .article-hero h1 {
+        font-family: "Bebas Neue", sans-serif;
+        font-size: clamp(36px, 6vw, 56px);
+        margin: 10px 0;
+      }
+      h2 {
+        font-size: 28px;
+        margin-top: 30px;
+      }
+      .lede {
+        color: var(--ink2);
+        max-width: 720px;
+      }
+      ul {
+        padding-left: 20px;
+      }
+      .button {
+        display: inline-block;
+        padding: 10px 16px;
+        border-radius: 8px;
+        background: var(--brand);
+        color: #fff;
+        text-decoration: none;
+        font-weight: 700;
+      }
+      .site-footer {
+        border-top: 1px solid #1e2130;
+        margin-top: 40px;
+      }
+      .footer-nav a {
+        margin-right: 12px;
+        text-decoration: none;
+        color: var(--ink2);
+      }
+      .disclosure {
+        border-top: 1px solid #1e2130;
+        margin-top: 28px;
+        padding-top: 16px;
+        color: var(--ink2);
+      }
+      @media (max-width: 640px) {
+        .container {
+          padding: 16px;
+        }
+      }
+    </style>
+  </body>
 </html>
