Add shared layout styles for content pages

--- a/guides/index.html
+++ b/guides/index.html
@@ -9,7 +9,7 @@
       content="All guides in one place. Start with photos and bio, then move to openers and first date planning."
     />
     <link rel="canonical" href="https://dategirlseasy.com/guides/" />
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
 
     <meta property="og:title" content="Guides" />
     <meta
