--- a/reviews/tinder.html
+++ b/reviews/tinder.html
@@ -12,7 +12,7 @@
       rel="canonical"
       href="https://dategirlseasy.com/reviews/tinder.html"
     />
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tinder Review" />
