--- a/playbooks/first-date-playbook.html
+++ b/playbooks/first-date-playbook.html
@@ -41,14 +41,14 @@
       content="Coffee, walk, and dessert routes with exact texts to set it up."
     />
 
-    <!-- Schema.org Article -->
+    <!-- Article schema -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Article",
         "headline": "First Date Playbook: Easy Plans That Feel Natural",
         "description": "A simple first date plan with exact texts and routes.",
-        "author": { "@type": "Person", "name": "Date Girls Easy" },
+        "author": { "@type": "Organization", "name": "Date Girls Easy" },
         "publisher": { "@type": "Organization", "name": "Date Girls Easy" },
         "datePublished": "2025-09-15",
         "dateModified": "2025-09-15",
@@ -59,6 +59,7 @@
       }
     </script>
 
+    <!-- Breadcrumbs -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -80,6 +81,7 @@
       }
     </script>
 
+    <!-- HowTo schema -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -117,50 +119,19 @@
         ]
       }
     </script>
-
-    <style>
-      .breadcrumb {
-        font-size: 14px;
-        color: var(--muted);
-        margin-bottom: 6px;
-      }
-      .route {
-        background: var(--card);
-        border: 1px solid #24294c;
-        border-radius: 12px;
-        padding: 14px;
-        margin: 12px 0;
-      }
-      .route h3 {
-        margin-top: 0;
-      }
-      .steps {
-        padding-left: 18px;
-      }
-      .template {
-        background: #0e1224;
-        border: 1px dashed #232748;
-        border-radius: 10px;
-        padding: 10px;
-        margin: 8px 0;
-      }
-      .cta-box {
-        background: var(--card);
-        border: 1px solid #24294c;
-        border-radius: 12px;
-        padding: 14px;
-        margin-top: 18px;
-      }
-    </style>
   </head>
+
   <body>
-    <header class="wrap"><a href="/" class="brand">Date Girls Easy</a></header>
+    <header class="wrap">
+      <a href="/" class="brand">Date Girls Easy</a>
+    </header>
 
     <main class="wrap">
       <nav class="breadcrumb">
-        <a href="/">Home</a> › <a href="/#guides">Guides</a> › First Date
+        <a href="/">Home</a> › <a href="/guides/">Guides</a> › First Date
         Playbook
       </nav>
+
       <h1>First Date Playbook: Easy Plans That Feel Natural</h1>
       <p class="muted">
         Three low-pressure routes with exact texts to set it up. Pick one and
@@ -168,64 +139,62 @@
       </p>
 
       <section class="route">
-        <h3>Route A — Coffee + Walk (60–90 minutes)</h3>
+        <h3>Route A: Coffee + Walk (60–90 minutes)</h3>
         <ol class="steps">
-          <li>Coffee at a bright café (20–30m)</li>
-          <li>Short walk to a park or bookstore (20–30m)</li>
+          <li>Coffee at a bright café (20–30 minutes)</li>
+          <li>Short walk to a park or bookstore (20–30 minutes)</li>
           <li>Exit or extend based on vibe</li>
         </ol>
         <div class="template">
           <strong>Text to set it up:</strong>
           <code
-            >“Let’s keep it easy: cappuccinos at [cafe] then a quick walk? Wed
-            6:30 or Sat 1pm?”</code
+            >Let’s keep it easy: cappuccinos at [cafe] then a quick walk? Wed
+            6:30 or Sat 1pm?</code
           >
         </div>
         <div class="template">
           <strong>Extend if it’s going well:</strong>
-          <code>“There’s a bookstore around the corner — 15 minutes?”</code>
+          <code>There’s a bookstore around the corner — 15 minutes?</code>
         </div>
       </section>
 
       <section class="route">
-        <h3>Route B — Dessert First (60 minutes)</h3>
+        <h3>Route B: Dessert First (60 minutes)</h3>
         <ol class="steps">
-          <li>Meet at a dessert spot (30m)</li>
-          <li>Short seated chat at a nearby lounge (30m)</li>
+          <li>Meet at a dessert spot (30 minutes)</li>
+          <li>Short seated chat nearby (30 minutes)</li>
         </ol>
         <div class="template">
           <strong>Text to set it up:</strong>
           <code
-            >“I’m pro-dessert. Gelato at [place] then a quick lounge nearby? Thu
-            7 or Sun 6?”</code
+            >I’m pro-dessert. Gelato at [place] then a quick lounge nearby? Thu
+            7 or Sun 6?</code
           >
         </div>
         <div class="template">
           <strong>If she’s unsure:</strong>
           <code
-            >“15 minutes to taste test and bail with no hard feelings if it’s
-            not a fit.”</code
+            >15 minutes to taste test and bail with no hard feelings if it’s not
+            a fit.</code
           >
         </div>
       </section>
 
       <section class="route">
-        <h3>Route C — Casual Night Out (90 minutes)</h3>
+        <h3>Route C: Casual Night Out (90 minutes)</h3>
         <ol class="steps">
-          <li>Meet at a lively spot with easy seating (45m)</li>
-          <li>Walk to a second location (45m)</li>
+          <li>Meet at a lively spot with easy seating (45 minutes)</li>
+          <li>Walk to a second location (45 minutes)</li>
         </ol>
         <div class="template">
           <strong>Text to set it up:</strong>
-          <code
-            >“Pick the playlist, I’ll pick the spot. Fri 7 or Sat 6:30?”</code
-          >
+          <code>Pick the playlist, I’ll pick the spot. Fri 7 or Sat 6:30?</code>
         </div>
         <div class="template">
           <strong>Polite exit if needed:</strong>
           <code
-            >“I’ve got an early morning — let’s call it here, but this was
-            fun.”</code
+            >I’ve got an early morning — let’s call it here, but this was
+            fun.</code
           >
         </div>
       </section>
@@ -234,14 +203,14 @@
         <h3>Next step: Second Date Blueprint</h3>
         <p>Keep momentum and make the follow-up natural.</p>
         <p class="muted">
-          Coming soon — meanwhile, use these openers and bios to feed more first
-          dates:
+          Coming soon. For now, use these to line up more first dates:
         </p>
         <p>
-          <a class="btn" href="/guides/openers-that-get-replies.html"
+          <a href="/guides/openers-that-get-replies.html"
             >Openers that get replies</a
           >
-          · <a class="btn" href="/guides/bio-templates.html">Bio templates</a>
+          ·
+          <a href="/guides/bio-templates.html">Bio templates</a>
         </p>
       </section>
 
@@ -254,6 +223,7 @@
     </main>
 
     <footer class="wrap">Date Girls Easy © <span id="y"></span></footer>
+
     <script>
       document.getElementById("y").textContent = new Date().getFullYear();
     </script>
